patterns update